# pico-aprs-beacon

./: .gitignore  Cargo.toml  README.md  afsk.py  build.rs  code.py  pins.txt
.cargo/: config.toml
src/: app.rs  audio_i2s.pio  ax25.rs  beacon.rs  bitstream.rs  display.rs  gps.rs  main.rs  modem.rs  sched.rs
src/aprs/: mod.rs
src/hardware/: audio.rs  mod.rs  ptt.rs  sharp_memory_display.rs  uart.rs
src/modem/: mod.rs
